# crushing-calculator

./: .example.env  .gitignore  LICENSE  README.md  README_DEPLOY.md  deploy.sh  docker-compose.yml
backend/: .example.env  Dockerfile  create_tables.py  debug_profit.py  pyproject.toml
backend/config/: status.json
backend/scripts/: add_prediction_features.py  add_saved_column.py  check_item_types.py  coordenadas.py  dump_db.py  migrate_to_multiserver.py  ocr.py  read_prediction_dataset.py
backend/src/api/: calculate_routes.py  entrypoint.py  items_routes.py  ocr_routes.py  prices_routes.py  status_routes.py
backend/src/db/: database.py  init_db.py
backend/src/models/: schemas.py  sql_models.py
backend/src/ocr/: coordenadas.py  ocr.py
backend/src/services/: calculator.py  equipment.py  profit.py  rune_regex.py
backend/src/settings/: config.py
backend/tests/: test_execution.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/: middleware.ts  proxy.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ControlPanel.tsx  Footer.tsx  ItemSearch.tsx  MaintenanceBanner.tsx  RecipeEditor.tsx  ResourcePriceEditor.tsx  ResultCard.tsx  RunePriceEditor.tsx  RuneTable.tsx  StatEditor.tsx  WhatsNewBanner.tsx
frontend/src/constants/: translations.ts
frontend/src/context/: LanguageContext.tsx  RunePriceContext.tsx
frontend/src/lib/: api.ts  static-assets.ts  utils.ts
nginx/: nginx.conf
scripts/: activar_mantenimiento.sh  desactivar_mantenimiento.sh  sync_images.sh  update.sh
(+4 files in other folders)
